--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="Jv5pPP1kXIx7NcR6gdTMIhfRumAIFGGl5Hsn6kzeKi8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free online fancy text generator tool. Create stylish, cool, and unique text for social media, gaming, and more. Works with Google Search Console.">
