--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Fancy Text Generator | Create Stylish Text for Social Media">
     <meta property="og:description" content="Generate fancy text styles instantly. Perfect for social media bios, gaming names, and more.">
     <meta property="og:image" content="/assets/og-image.jpg">
-    <meta property="og:url" content="https://yourdomain.com">
+    <meta property="og:url" content="https://toolwebsite.github.io/textgenerator/">
     <meta property="og:type" content="website">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
