--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Free online fancy text generator tool. Create stylish, cool, and unique text for social media, gaming, and more. Works with Google Search Console.">
-    <meta name="keywords" content="fancy text generator, stylish text, cool fonts, unicode text, social media fonts, text converter">
+    <meta name="keywords" content="fancy text generator, stylish text, cool fonts, unicode text, social media fonts, text converter, fancy text generator blue colour, fancy text generator for Instagram, font generator, fancy text generator blue colour for Instagram, stylish font, fancy text generator with emoji, fancy text generator red colour, bold text generator, stylish text generator, fancy letters, bold text generator, text fonts">
     <meta name="author" content="Fancy Text Generator">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Fancy Text Generator | Create Stylish Text for Social Media">
@@ -14,6 +14,12 @@
     <meta property="og:image" content="/assets/og-image.jpg">
     <meta property="og:url" content="https://toolwebsite.github.io/textgenerator/">
     <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Fancy Text Generator | Stylish Fonts for Social Media">
+    <meta name="twitter:description" content="Create beautiful fancy text in blue, red colors with emojis for Instagram and other platforms. Generate bold, stylish fonts instantly.">
+    <meta name="twitter:image" content="/assets/og-image.jpg">
+    <link rel="canonical" href="https://toolwebsite.github.io/textgenerator/">
+    <meta name="theme-color" content="#4285f4">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Fancy Text Generator | Create Stylish Text for Social Media</title>
