--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="container">
             <p>&copy; <span id="current-year"></span> Fancy Text Generator. All rights reserved.</p>
             <nav>
-                <a href="/" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
                 <a href="privacy.html" class="active">Privacy</a>
                 <a href="terms.html">Terms</a>
                 <a href="contact.html">Contact</a>
