--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="Fancy Text Generator | Create Stylish Text for Social Media">
     <meta property="og:description" content="Generate fancy text styles instantly. Perfect for social media bios, gaming names, and more.">
-    <meta property="og:image" content="/assets/og-image.jpg">
+    <meta property="og:image" content="https://toolwebsite.github.io/textgenerator/assets/og-image.jpg">
     <meta property="og:url" content="https://toolwebsite.github.io/textgenerator/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Fancy Text Generator | Stylish Fonts for Social Media">
     <meta name="twitter:description" content="Create beautiful fancy text in blue, red colors with emojis for Instagram and other platforms. Generate bold, stylish fonts instantly.">
-    <meta name="twitter:image" content="/assets/og-image.jpg">
+    <meta name="twitter:image" content="https://toolwebsite.github.io/textgenerator/assets/og-image.jpg">
     <meta name="theme-color" content="#4285f4">
     <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
