--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+    <meta name="msvalidate.01" content="800CC9FF4FDCAB3D85F89150E3350576" />
     <meta name="google-site-verification" content="Jv5pPP1kXIx7NcR6gdTMIhfRumAIFGGl5Hsn6kzeKi8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
